samples/_failures_safe/1761691395_bb10cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3601847.c: In function ‘main’:
./samples/SAFE/__tmp_b3601847.c:139: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_b3601847.c:138:8: note: to match this ‘(’
  138 |     if (fgets(input, sizeof(input), stdin) == NULL
      |        ^
./samples/SAFE/__tmp_b3601847.c:138:5: error: expected declaration or statement at end of input
  138 |     if (fgets(input, sizeof(input), stdin) == NULL
      |     ^~
